# Text2EPUB

./: !!!Code.bat  !!!Run.bat  .gitignore  installer.py  pyproject.toml  textpublisher.py
Utils/: check_chapterID.py  env.py  installer.py  main.py  style.css  task.py  txtPub.py
